# SmartCar

./: CMakeLists.txt
configs/: config.json  image.json  label_list.txt  model  model.yml  params.json
example/: cameraTest.cpp  predictTest.cpp  trackTest.cpp
include/: PID.hpp  common.hpp  joyStick.hpp  predict.hpp  serialPort.hpp  track.hpp  videoeffect.hpp
src/: predict.cpp  smartcar.cpp
